--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -44,6 +43,9 @@ dependencies:
   google_fonts: ^1.1.2
   commons: ^0.7.8+3
   firebase_database: ^3.1.6
+  localization:
+  shared_preferences: ^0.5.12+4
+  date_util: ^0.1.4
 
 
 
